--- a/project/index.html
+++ b/project/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title> | Dev/Null</title>
+  <title> | Dev</title>
   <meta name="renderer" content="webkit" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 
@@ -16,7 +16,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="#f8f5ec">
 
 
-<meta name="author" content="Denon" /><meta name="description" content="" /><meta name="keywords" content="Hugo, theme, even" />
+<meta name="author" content="Denon" /><meta name="description" content="" /><meta name="keywords" content="Denon, blog, tech" />
 
 
 
@@ -34,13 +34,14 @@
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 
 
-<link href="/dist/even.bc253810.min.css" rel="stylesheet">
+<link href="/dist/even.9f334ccf.min.css" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.1.20/dist/jquery.fancybox.min.css" integrity="sha256-7TyXnr2YU040zfSP+rEcz29ggW4j56/ujTPwjMzyqFY=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/custom.css">
 <link rel="stylesheet" href="/css/bulma-tag.css">
 <link rel="stylesheet" href="/css/bulma-pageloader.css">
 <link rel="stylesheet" href="/css/bulma-timeline.css">
+<link rel="stylesheet" href="/css/syntax.css">
 
 
 <meta property="og:title" content="" />
@@ -75,7 +76,7 @@
 <body>
   <div id="mobile-navbar" class="mobile-navbar">
   <div class="mobile-header-logo">
-    <a href="/" class="logo">Dev/Null</a>
+    <a href="/" class="logo">Dev</a>
   </div>
   <div class="mobile-navbar-icon">
     <span></span>
@@ -102,7 +103,7 @@
   <div class="container" id="mobile-panel">
     <header id="header" class="header">
         <div class="logo-wrapper">
-  <a href="/" class="logo">Dev/Null</a>
+  <a href="/" class="logo">Dev</a>
 </div>
 
 <nav class="site-navbar">
@@ -184,7 +185,6 @@
 
   <span class="copyright-year">
     &copy; 
-    2017 - 
     2019
     <span class="heart">
       <i class="iconfont icon-heart"></i>
@@ -204,6 +204,14 @@
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.1.20/dist/jquery.fancybox.min.js" integrity="sha256-XVLffZaxoWfGUEbdzuLi7pwaUJv1cecsQJQqGLe7axY=" crossorigin="anonymous"></script>
 <script type="text/javascript" src="/dist/even.4bf41a80.min.js"></script>
+  <script type="text/javascript">
+    window.MathJax = {
+      tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]},
+      showProcessingMessages: false,
+      messageStyle: 'none'
+    };
+  </script>
+  <script async src="https://cdn.jsdelivr.net/npm/mathjax@2.7.5/MathJax.js?config=TeX-MML-AM_CHTML"  integrity="sha256-nvJJv9wWKEm88qvoQl9ekL2J+k/RWIsaSScxxlsrv8k=" crossorigin="anonymous"></script>
 
 
 
