--- a/about/index.html
+++ b/about/index.html
@@ -72,6 +72,7 @@
   <script src="https://cdn.jsdelivr.net/npm/respond.js@1.4.2/dest/respond.min.js"></script>
 <![endif]-->
 
+  <link href="https://fonts.googleapis.com/css?family=Fira+Code&display=swap" rel="stylesheet"> 
 </head>
 <body>
   <div id="mobile-navbar" class="mobile-navbar">
