Fix# blog style

--- a/404.html
+++ b/404.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-  <title>404 page not found - Dev</title>
+  <title>404 page not found - Dev 🖥</title>
   <meta name="renderer" content="webkit" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1"/>
 
@@ -34,14 +34,13 @@
 <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 
 
-<link href="/dist/even.a371b717.min.css" rel="stylesheet">
+<link href="/dist/even.23f090c1.min.css" rel="stylesheet">
 
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@fancyapps/fancybox@3.1.20/dist/jquery.fancybox.min.css" integrity="sha256-7TyXnr2YU040zfSP+rEcz29ggW4j56/ujTPwjMzyqFY=" crossorigin="anonymous">
 <link rel="stylesheet" href="/css/custom.css">
 <link rel="stylesheet" href="/css/bulma-tag.css">
 <link rel="stylesheet" href="/css/bulma-pageloader.css">
 <link rel="stylesheet" href="/css/bulma-timeline.css">
-<link rel="stylesheet" href="/css/syntax.css">
 
 
 <meta property="og:title" content="404 Page not found" />
@@ -70,7 +69,7 @@
 <body>
   <div id="mobile-navbar" class="mobile-navbar">
   <div class="mobile-header-logo">
-    <a href="/" class="logo">Dev</a>
+    <a href="/" class="logo">Dev 🖥</a>
   </div>
   <div class="mobile-navbar-icon">
     <span></span>
@@ -97,7 +96,7 @@
   <div class="container" id="mobile-panel">
     <header id="header" class="header">
         <div class="logo-wrapper">
-  <a href="/" class="logo">Dev</a>
+  <a href="/" class="logo">Dev 🖥</a>
 </div>
 
 <nav class="site-navbar">
@@ -172,7 +171,7 @@
   <span class="copyright-year">
     &copy; 
     2019
-    <span class="heart">
+    <span class="heart" style="color: tomato;">
       <i class="iconfont icon-heart"></i>
     </span>
     <span class="author">Denon</span>
@@ -184,7 +183,7 @@
       <i class="iconfont icon-up"></i>
     </div>
   </div>
-  
+  <script src="/lib/highlight/highlight.pack.js?v=20171001"></script>
   <script src="https://cdn.jsdelivr.net/npm/jquery@3.2.1/dist/jquery.min.js" integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4=" crossorigin="anonymous"></script>
   <script src="https://cdn.jsdelivr.net/npm/slideout@1.0.1/dist/slideout.min.js" integrity="sha256-t+zJ/g8/KXIJMjSVQdnibt4dlaDxc9zXr/9oNPeWqdg=" crossorigin="anonymous"></script>
   <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
