--- a/404.html
+++ b/404.html
@@ -16,7 +16,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="#f8f5ec">
 
 
-<meta name="author" content="Denon" /><meta name="description" content="I have no idea." /><meta name="keywords" content="Denon, blog, tech" />
+<meta name="author" content="Denon" /><meta name="description" content="A Wolf in Sheep&#39;s Clothing 🐑" /><meta name="keywords" content="Denon, blog, tech" />
 
 
 
@@ -45,14 +45,14 @@
 
 
 <meta property="og:title" content="404 Page not found" />
-<meta property="og:description" content="I have no idea." />
+<meta property="og:description" content="A Wolf in Sheep&#39;s Clothing 🐑" />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="http://localhost:1313/404.html" />
 
 <meta itemprop="name" content="404 Page not found">
-<meta itemprop="description" content="I have no idea."><meta name="twitter:card" content="summary"/>
+<meta itemprop="description" content="A Wolf in Sheep&#39;s Clothing 🐑"><meta name="twitter:card" content="summary"/>
 <meta name="twitter:title" content="404 Page not found"/>
-<meta name="twitter:description" content="I have no idea."/>
+<meta name="twitter:description" content="A Wolf in Sheep&#39;s Clothing 🐑"/>
 
 <!--[if lte IE 9]>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/classlist/1.1.20170427/classList.min.js"></script>
